# E-Series

./: .gitmodules  .gitmodules.old  CMakeLists.txt  CMakePresets.json  README.adoc  README.md
src/: CMakeLists.txt
src/CPU/: ALU.bsv  ALU_ESeries_tb.bsv  ALU_tb.bsv  BranchPrediction.bsv  BranchPredictor_tb.bsv  BranchUnit.bsv  BypassUnit.bsv  CMakeLists.txt  CPU.bsv  CPU_tb.bsv  CSRFile.bsv  Debug.bsv  DecodeStage.bsv  DecodeStage_tb.bsv  DecodeUnit.bsv  DecodedInstruction.bsv  EncodedInstruction.bsv  Exception.bsv  ExecuteStage.bsv  ExecuteStage_tb.bsv  ExecutedInstruction.bsv  FetchStage.bsv  FetchStage_tb.bsv  FetchUnit.bsv  GPRFile.bsv  ISAUtils.bsv  LoadStore.bsv  LoadStore_tb.bsv  MemoryAccessUnit.bsv  MemoryStage.bsv  PGLib.bsh  PipelineController.bsv  PipelineRegisters.bsv  PipelineUtils.bsv  ProgramCounterRedirect.bsv  Scoreboard.bsv  Trap.bsv  TrapController.bsv  TrapController_tb.bsv  WritebackStage.bsv  (+1 more)
src/CPU/CSRs/: CMakeLists.txt  MachineInformation.bsv
src/CoreBlocks/: ALU.bsv  BranchUnit.bsv  CMakeLists.txt  CSRFile.bsv  DecodeStage.bsv  ExecuteStage.bsv  ExecuteStage_tb.bsv  FetchStage.bsv  ISAUtils.bsv  MemoryStage.bsv  PipelineRegisters.bsv  PipelineUtils.bsv  WritebackStage.bsv
src/CoreBlocks/CSRs/: CSRs.bsv  MachineISA.bsv  MachineStatus.bsv
src/CoreBlocks/assets/: gprfile_init.hex
src/E100/: CMakeLists.txt  CPU.bsv
src/E100/test/: CMakeLists.txt
src/E100/test/isa_tests/: CMakeLists.txt
src/E100/test/simlauncher/: CMakeLists.txt
src/E100/test/test_host/: CMakeLists.txt  TestHost.bsv
src/Y001/: CMakeLists.txt  CPU.bsv  TestHost.bsv
test/: CMakeLists.txt
test/CPU/: CMakeLists.txt  TestHost.bsv
test/isa_tests/: CMakeLists.txt  TestHost.bsv
test/simlauncher/: simlauncher.tmpl
tests/isa_tests/: CMakeLists.txt
tests/smoke_tests/: CMakeLists.txt
tools/: simlauncher.sh
